force-app/main/default/objects/RSI_Insurance_Policy_Coverage__c/RSI_Insurance_Policy_Coverage__c.object-meta.xml
<CustomObject>
    <label>Policy Coverage</label>
    <nameField>
        <displayFormat>PC-{00000}</displayFormat>
        <label>Insurance Policy Coverage Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Policy Coverages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>