force-app/main/default/objects/RSI_Insurance_Policy_Coverage__c/fields/Item_Description__c.field-meta.xml
<CustomField>
    <fullName>Item_Description__c</fullName>
    <description>Description for the item that is added under coverage</description>
    <label>Item Description</label>
    <type>TextArea</type>
</CustomField>