force-app/main/default/objects/RSI_Insurance_Policy_Coverage__c/fields/Item_Type__c.field-meta.xml
<CustomField>
    <fullName>Item_Type__c</fullName>
    <label>Item Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Jewellery</fullName>
            </value>
            <value>
                <fullName>Furniture</fullName>
            </value>
            <value>
                <fullName>Kitchen Item</fullName>
            </value>
            <value>
                <fullName>Electronics</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>