force-app/main/default/objects/RSI_Insurance_Policy_Coverage__c/fields/Number_of_Items__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Items__c</fullName>
    <description>Number of Items that are covered under Policy Coverage</description>
    <label>Number of Items</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>