force-app/main/default/objects/RSI_Insurance_Policy_Coverage__c/fields/RSI_Additional_Interest__c.field-meta.xml
<CustomField>
    <fullName>RSI_Additional_Interest__c</fullName>
    <label>Additional Interest</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>