force-app/main/default/objects/RSI_Insurance_Policy_Coverage__c/fields/RSI_Coverage_Amount__c.field-meta.xml
<CustomField>
    <fullName>RSI_Coverage_Amount__c</fullName>
    <label>Limit of Liability</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>