force-app/main/default/objects/RSI_Insurance_Policy_Coverage__c/fields/RSI_Coverage_Details__c.field-meta.xml
<CustomField>
    <fullName>RSI_Coverage_Details__c</fullName>
    <label>Coverage Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>