force-app/main/default/objects/RSI_Insurance_Policy_Coverage__c/fields/RSI_Coverage_Type__c.field-meta.xml
<CustomField>
    <fullName>RSI_Coverage_Type__c</fullName>
    <label>Coverage Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Liability</fullName>
            </value>
            <value>
                <fullName>Uninsured Motorist coverage</fullName>
            </value>
            <value>
                <fullName>PIP</fullName>
            </value>
            <value>
                <fullName>Collision</fullName>
            </value>
            <value>
                <fullName>Dwelling coverage</fullName>
            </value>
            <value>
                <fullName>Personal Property coverage</fullName>
            </value>
            <value>
                <fullName>Windstorm</fullName>
            </value>
            <value>
                <fullName>Fire</fullName>
            </value>
            <value>
                <fullName>Vandalism</fullName>
            </value>
            <value>
                <fullName>Visitor Injuries</fullName>
            </value>
            <value>
                <fullName>Theft</fullName>
            </value>
            <value>
                <fullName>Water Damage</fullName>
            </value>
            <value>
                <fullName>Other Structure</fullName>
            </value>
            <value>
                <fullName>Loss of use</fullName>
            </value>
            <value>
                <fullName>Flood</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>