force-app/main/default/objects/RSI_Insurance_Policy_Coverage__c/fields/RSI_Discounts__c.field-meta.xml
<CustomField>
    <fullName>RSI_Discounts__c</fullName>
    <label>Discounts</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>